--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "string-split-join": "0.0.1"
   },
   "devDependencies": {
-    "mocha": "^5.0.1"
+    "mocha": "^5.0.1",
+    "mocha-teamcity-reporter": ">=2.0.0"
   }
 }
 
