--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha test/test.js",
+    "test": "mocha --reporter mocha-teamcity-reporter test/test.js",
     "lint": "standard"
   },
   "author": "Tarek Becker <tarek@becker.ly>",
