--- a/template.yaml
+++ b/template.yaml
@@ -2,6 +2,16 @@ AWSTemplateFormatVersion : '2010-09-09'
 Transform: AWS::Serverless-2016-10-31
 Description: Pipeline example serverless application
 
+Outputs:
+  APIRoot:
+    Description: Url of the API
+    Export:
+      # Every export needs an account wide unique name
+      Name:
+        'Fn::Sub': '${AWS::StackName}-apiroot'
+    Value:
+      'Fn::Sub': 'https://${RestAPI}.execute-api.${AWS::Region}.amazonaws.com/prod'
+
 Resources:
   HelloWorldLambda:
     Type: AWS::Serverless::Function
@@ -54,5 +64,3 @@ Resources:
       ManagedPolicyArns:
           - arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
     Type: 'AWS::IAM::Role'
-
-
