--- a/template.yaml
+++ b/template.yaml
@@ -64,3 +64,21 @@ Resources:
       ManagedPolicyArns:
           - arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
     Type: 'AWS::IAM::Role'
+  # This alarm monitors the errors of the HelloWorld lambda function
+  HelloWorldLambdaAlarm:
+    Type: 'AWS::CloudWatch::Alarm'
+    Properties:
+      AlarmDescription: Errors of Hello World function (${AWS::StackName})
+      AlarmName: !Sub 'Hello World Errors ${AWS::StackName}'
+      # if more than zero (threshold below) errors occur, change state
+      # to alarm
+      ComparisonOperator: GreaterThanThreshold
+      EvaluationPeriods: 1
+      MetricName: Errors
+      Namespace: AWS/Lambda
+      # monitor last five minutes
+      Period: 300
+      Statistic: Sum
+      Threshold: 0
+      # if there was no invocation, the alarm state is OK
+      TreatMissingData: notBreaching
