--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -43,7 +43,7 @@ unittesting:
 
 packageApp:
     stage: package
-    image: tarekbecker/awscli
+    image: amazon/aws-cli
     # use the artifcats of the 'npmInstall' job
     dependencies:
         - npmInstall
@@ -76,22 +76,24 @@ testOnTestStack:
 
 removeTestStack:
     stage: qaRemove
-    image: tarekbecker/awscli
+    image: amazon/aws-cli
     script:
         - aws cloudformation delete-stack --stack-name demo-pipeline-test-$CI_PIPELINE_ID
         - sleep 60
-        - timeout -t 190 aws cloudformation wait stack-delete-complete --stack-name demo-pipeline-test-$CI_PIPELINE_ID || (echo 'Stack deletion failed.' && exit 1)
+        - timeout 190 aws cloudformation wait stack-delete-complete --stack-name demo-pipeline-test-$CI_PIPELINE_ID || (echo 'Stack deletion failed.' && exit 1)
     # execute this job even if one of the previous ones failed
     # to ensure not having orphan stacks
     when: always
 
 deployProd:
     stage: deploy
-    image: tarekbecker/awscli
+    image: amazon/aws-cli
     dependencies:
         - packageApp
     script:
         # use the template-export file to deploy the stack
         # the cloud formation stack name is prod for our stack
         - aws cloudformation deploy --template-file template-export.yml --stack-name demo-pipeline-prod-stack --capabilities CAPABILITY_IAM
+    only:
+        - master
 
