--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --reporter mocha-teamcity-reporter test/test.js",
+    "test": "mocha test/test.js",
     "lint": "standard"
   },
   "author": "Tarek Becker <tarek@becker.ly>",
@@ -13,8 +13,7 @@
     "string-split-join": "0.0.1"
   },
   "devDependencies": {
-    "mocha": "^5.0.1",
-    "mocha-teamcity-reporter": ">=2.0.0"
+    "mocha": "^5.0.1"
   }
 }
 
