--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,6 +44,7 @@ unittesting:
 packageApp:
     stage: package
     image: amazon/aws-cli
+    entrypoint: [""]
     # use the artifcats of the 'npmInstall' job
     dependencies:
         - npmInstall
