--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,14 +45,14 @@ packageApp:
     stage: package
     image:
       name: amazon/aws-cli
-      entrypoint: ["/bin/bash"]
+      #entrypoint: ["/bin/bash"]
     # use the artifcats of the 'npmInstall' job
     dependencies:
         - npmInstall
     script:
         # package uploads the source code to S3 and creates a new
         # template file with a reference to the code in S3
-        - aws cloudformation package --template template.yml --s3-bucket $S3_BUCKET --output-template template-export.yml
+        - cloudformation package --template template.yml --s3-bucket $S3_BUCKET --output-template template-export.yml
     artifacts:
         paths:
             # the modified template is the result of this stage
@@ -66,7 +66,7 @@ createTestStack:
     script:
         # same command as deployProd, but the stack name includes the
         # pipeline id. This allows testing multiple pipelines concurrently.
-        - aws cloudformation deploy --template-file template-export.yml --stack-name demo-pipeline-test-$CI_PIPELINE_ID --capabilities CAPABILITY_IAM
+        - cloudformation deploy --template-file template-export.yml --stack-name demo-pipeline-test-$CI_PIPELINE_ID --capabilities CAPABILITY_IAM
 
 testOnTestStack:
     stage: qaTest
@@ -80,9 +80,8 @@ removeTestStack:
     stage: qaRemove
     image: amazon/aws-cli
     script:
-        - aws cloudformation delete-stack --stack-name demo-pipeline-test-$CI_PIPELINE_ID
-        - sleep 60
-        - timeout 190 aws cloudformation wait stack-delete-complete --stack-name demo-pipeline-test-$CI_PIPELINE_ID || (echo 'Stack deletion failed.' && exit 1)
+        - cloudformation delete-stack --stack-name demo-pipeline-test-$CI_PIPELINE_ID
+        - cloudformation wait stack-delete-complete --stack-name demo-pipeline-test-$CI_PIPELINE_ID || (echo 'Stack deletion failed.' && exit 1)
     # execute this job even if one of the previous ones failed
     # to ensure not having orphan stacks
     when: always
@@ -95,7 +94,7 @@ deployProd:
     script:
         # use the template-export file to deploy the stack
         # the cloud formation stack name is prod for our stack
-        - aws cloudformation deploy --template-file template-export.yml --stack-name demo-pipeline-prod-stack --capabilities CAPABILITY_IAM
+        - cloudformation deploy --template-file template-export.yml --stack-name demo-pipeline-prod-stack --capabilities CAPABILITY_IAM
     only:
         - master
 
